# wikiwwii

my-package/: pyproject.toml
my-package/tests/: test_wikiwwii.py
