[tool.poetry]
name = "wikiwwii"
version = "0.1.0"
description = ""
authors = ["da griq <dagriq@yahoo.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
pytest = "^7.4.2"
pandas = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
